# testtask

common/: structs.h
common/date/: readme.txt
receiver/: CMakeLists.txt  main.cpp  packetbuffer.h  receiver.cpp  receiver.h
sender/: CMakeLists.txt  main.cpp  packetgenerator.cpp  packetgenerator.h  sender.cpp  sender.h
